--- a/app/styles/_general.scss
+++ b/app/styles/_general.scss
@@ -28,7 +28,10 @@ header {
 }
 
 #logo {
+  display: block;
   height: 100px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /**********************************
