--- a/app/styles/_general.scss
+++ b/app/styles/_general.scss
@@ -10,6 +10,7 @@ main {
   max-width: 940px;
   margin: 0 auto;
   padding: 0 5%;
+  overflow: auto;
 }
 
 a {
@@ -68,5 +69,5 @@ footer {
   text-align: center;
   clear: both;
   padding-top: 50px;
-  color: #ccc;
+  color: darken(#ccc, 20%);
 }
