--- a/app/styles/_contact.scss
+++ b/app/styles/_contact.scss
@@ -1,3 +1,28 @@
+.contact-info {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  font-size: 0.9em;
+}
+
+.contact-info a {
+  display: block;
+  min-height: 20px;
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+  padding: 0 0 0 30px;
+  margin: 0 0 10px;
+}
+
+.contact-info li.phone a {
+  background-image: url('../images/icons/phone.png');
+}
+
+.contact-info li.email a {
+  background-image: url('../images/icons/mail.png');
+}
+
+
 input[type="text"],
 input[type="password"],
 input[type="date"],
