Fixed Typekit font call

--- a/app/styles/_general.scss
+++ b/app/styles/_general.scss
@@ -3,7 +3,7 @@ GENERAL
 ***********************************/
 
 body {
-  font-family: 'Myriad Pro', sans-serif;
+  font-family: 'myriad-pro', sans-serif;
 }
 
 main {
