--- a/app/styles/_header_responsive.scss
+++ b/app/styles/_header_responsive.scss
@@ -23,6 +23,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 1%;
+    margin-top: 1%;
     overflow: auto;
   }
 }
@@ -50,4 +51,12 @@
     margin-right: 4%;
     margin-top: 5px;
   }
+}
+
+@media screen and (max-width: 660px) {
+  #header-wrap {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
 }
