--- a/app/styles/_general.scss
+++ b/app/styles/_general.scss
@@ -71,8 +71,9 @@ footer {
   font-size: 0.75em;
   text-align: center;
   clear: both;
-  padding-top: 50px;
-  color: darken(#ccc, 20%);
+  overflow: auto;
+  padding-top: 10px;
+  margin-top: 20px;
 }
 
 /**********************************
@@ -84,6 +85,12 @@ Page: About
   display: block;
   border-radius: 25px;
   height: 200px;
+}
+
+#butterfly {
+  display: block;
+  margin: 0 auto;
+  height: 25px;
 }
 
 #child-first {
