--- a/app/styles/_general.scss
+++ b/app/styles/_general.scss
@@ -4,6 +4,7 @@ GENERAL
 
 body {
   font-family: 'myriad-pro', sans-serif;
+  height: 100%;
 }
 
 main {
@@ -11,10 +12,16 @@ main {
   margin: 0 auto;
   padding: 0 5%;
   overflow: auto;
+  padding-bottom: 13.3%;
 }
 
 a {
   text-decoration: none;
+}
+
+#body-wrap {
+  min-height: 100%;
+  position: relative;
 }
 
 /**********************************
@@ -74,6 +81,11 @@ footer {
   overflow: auto;
   padding-top: 10px;
   margin-top: 20px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
 }
 
 /**********************************
