--- a/app/styles/_colors.scss
+++ b/app/styles/_colors.scss
@@ -27,11 +27,11 @@ footer {
   color: #fff;
 
   a {
-    color: inherit;
+    color: $green;
     transition: color 0.5s;
 
     &:hover {
-      color: darken(#fff, 15%);
+      color: darken($green, 5%);
       transition: color 0.5s;
     }
   }
@@ -39,11 +39,13 @@ footer {
 
 /* links */
 a {
-  color: lighten($blue, 10%);
+  // color: lighten($blue, 10%);
+  color: $green;
   transition: color 0.5s;
 
   &:hover {
-    color: darken($blue, 10%);
+    // color: darken($blue, 10%);
+    color: darken($green, 10%);
     transition: color 0.5s;
   }
 }
@@ -56,10 +58,11 @@ nav a, nav a:visited {
 
 /* selected nav link */
 nav a.selected {
-  color: darken($blue, 25%);
+  // color: darken($blue, 25%);
+  color: lighten($green, 15%);
 }
 
 nav a:hover {
-  color: darken($blue, 15%);
+  color: lighten($green, 15%);
   transition: color 0.5s;
 }
