Added Facebook link to footer and now enrolling banner on homepage.

--- a/app/styles/_header_responsive.scss
+++ b/app/styles/_header_responsive.scss
@@ -15,7 +15,7 @@
 
   header {
     border-bottom: 5px solid darken($blue, 10%);
-    margin-bottom: 60px;
+    margin-bottom: 0;
   }
 
   #header-wrap {
