--- a/app/styles/_general.scss
+++ b/app/styles/_general.scss
@@ -15,15 +15,15 @@ main {
   padding-bottom: 13.5%;
 
   @media screen and (max-width: 800px) {
-    padding-bottom: 20%;
+    padding-bottom: 35%;
   }
 
   @media screen and (max-width: 450px) {
-    padding-bottom: 40%;
+    padding-bottom: 50%;
   }
 
   @media screen and (max-width: 350px) {
-    padding-bottom: 45%;
+    padding-bottom: 55%;
   }
 }
 
@@ -45,6 +45,7 @@ header {
   float: left;
   padding: 5px 0 0 0;
   width: 100%;
+  margin-bottom: 0;
 }
 
 #logo {
@@ -92,16 +93,16 @@ footer {
   text-align: center;
   clear: both;
   overflow: auto;
-  padding-top: 10px;
-  margin-top: 20px;
+  padding-top: 5px;
+  margin-top: 5px;
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 100px;
+  height: 120px;
 
   @media screen and (max-width: 450px) {
-    height: 120px;;
+    height: 150px;
   }
 }
 
