--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -18,3 +18,22 @@ ul#locations {
 		padding-top: 0;
 	}
 }
+
+#enrollment-banner {
+  background-color: $purple;
+  margin: 0 auto;
+  width: 100%;
+  height: 100px;
+  clear: both;
+  
+  a:hover {
+    color: darken($green, 5%);
+  }
+  
+  h1 {
+    color: $green;
+    text-align: center;
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+}
