Updated images, added fb icon to contact us.

--- a/app/styles/_contact.scss
+++ b/app/styles/_contact.scss
@@ -22,6 +22,10 @@
   background-image: url('../images/icons/mail.png');
 }
 
+.contact-info li.facebook a {
+  background-image: url('../images/icons/fb-icon.png');
+}
+
 
 input[type="text"],
 input[type="password"],
