--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -1,22 +1,24 @@
-#maps-frame {
+#cover-boy {
 	float: right;
-	padding-top: 20px;
-	padding-bottom: 20px;
+  border-radius: 25px;
+  height: 265px;
+  width: 400px;
 
-	@media screen and (max-width: 800px) {
-		display: none;
-		padding-bottom: 0;
-		padding-top: 0;
-	}
+  @media screen and (max-width: 628px) {
+    float: none;
+    display: block;
+    margin: 0 auto;
+  }
+
+  @media screen and (max-width: 450px) {
+    height: 172px;
+    width: 300px;
+  }
 }
 
 ul#locations {
 	float: left;
-	padding-top: 10%;
-
-	@media screen and (max-width: 800px) {
-		padding-top: 0;
-	}
+	padding-right: 30px;
 }
 
 #enrollment-banner {
@@ -36,4 +38,12 @@ ul#locations {
     padding-top: 25px;
     padding-bottom: 25px;
   }
+}
+
+#main-float-wrap {
+  overflow: auto;
+}
+
+#services-p {
+  text-align: center;
 }
